--- a/css/responsive.css
+++ b/css/responsive.css
@@ -188,7 +188,7 @@
 	.footer-distributed .footer-left{
 		text-align: center;
 	}
-	#home {
+	.main-banner {
 		width: 100vw;  
 		height: 100vh;
 	}
